ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pupoo-ai
  namespace: pupoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pupoo-ai
  template:
    metadata:
      labels:
        app: pupoo-ai
    spec:
      containers:
        - name: ai
          image: 593797021262.dkr.ecr.ap-northeast-2.amazonaws.com/pupoo-ai:20260312
          ports:
            - containerPort: 8000
