backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pupoo-backend
  namespace: pupoo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pupoo-backend
  template:
    metadata:
      labels:
        app: pupoo-backend
    spec:
      containers:
        - name: backend
          image: 593797021262.dkr.ecr.ap-northeast-2.amazonaws.com/pupoo-backend:20260313-cdn-cloudfront
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
