backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pupoo-backend
  namespace: pupoo
spec:
  selector:
    app: pupoo-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
