pupoo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pupoo-ingress
  namespace: pupoo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pupoo-backend
                port:
                  number: 80
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: pupoo-ai
                port:
                  number: 80
